# OTUS_HW2

./: CMakeLists.txt  main.cpp  tempCodeRunnerFile.cpp
.github/workflows/: release.yml
Allocator_lib/: Allocator.cpp  Allocator.h  CMakeLists.txt
Donut_lib/: CMakeLists.txt  Donut.cpp  Donut.h
src/: CMakeLists.txt  main.cpp
